Fixing layout issues in FF and IE

--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -2,7 +2,6 @@
   background-color sidebar-bg-color
 
 .summary
-  @extend .container
   text-align center
 
   h1
