--- a/src/styles/layout.styl
+++ b/src/styles/layout.styl
@@ -1,7 +1,9 @@
 .container
   lost-utility clearfix
 
-.sidebar,
+.sidebar
+  lost-column 4/12 12 0
+  
 .sidebar:before
   lost-column 4/12 12 0
 
